<resources>
    <string name="app_name">Eventure</string>
    <string name="welcome_title">Welcome to Eventure</string>
    <string name="welcome_desc">Join us to explore events in your location based on your interest</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="email_hint">enter your email</string>
    <string name="password">Password</string>
    <string name="password_hint">enter password</string>
    <string name="login_to_register_text">Don\'t have an account?</string>
    <string name="name">name</string>
    <string name="name_hint">enter your name</string>
    <string name="register_to_login_text">already have an account?</string>

</resources>